prevent code spans from wrapping in specs, closes #307

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -924,3 +924,8 @@ label.radio-chooser input {
   padding: 0.5rem;
   background-color: #ffffee;
 }
+
+.code-is-nowrap code {
+  text-wrap: nowrap;
+  word-break: keep-all;
+}
